[gd_scene load_steps=6 format=3 uid="uid://dmfvp4x1q1gap"]

[ext_resource type="Script" path="res://scripts/DialogueBox.gd" id="1_oa7na"]
[ext_resource type="JSON" path="res://assets/dialogue/dialogue.json" id="2_v75jn"]
[ext_resource type="JSON" path="res://assets/dialogue/witch1.json" id="3_p5yrj"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="3_viubp"]
[ext_resource type="JSON" path="res://assets/dialogue/witch2.json" id="4_73ckk"]

[node name="DialogueBox" type="Node2D"]
script = ExtResource("1_oa7na")
dialogue1 = ExtResource("2_v75jn")
dialogue2 = ExtResource("3_p5yrj")
dialogue3 = ExtResource("4_73ckk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -164.5
offset_right = 164.5
offset_bottom = 40.0
grow_horizontal = 2
alignment = 1

[node name="Text" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "This is some darn good dialogue right here"
horizontal_alignment = 1

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("3_viubp")

[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="EzDialogue" to="." method="_on_ez_dialogue_end_of_dialogue_reached"]
